--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">    
     <title>Admin Dashboard</title>
 </head>
 <body>
    <aside class="aside-container">
-    <h1><i class="fa-solid fa-display-code"></i>DashBoard</h1>
+    <h1><i class="fa-solid fa-house"></i>DashBoard</h1>
     <ul class="list-1">
         <li><i class="fa-solid fa-house"></i>Home</li>
         <li><i class="fa-solid fa-address-card"></i>Profile</li>
@@ -20,28 +23,178 @@
     </ul>
     <ul class="list-2">
         <li><i class="fa-solid fa-gear"></i>Settings</li>
-        <li><i class="fa-solid fa-message-question"></i>pport</li>
-        <li><i class="fa-solid fa-shield-check"></i>Privacy</li>
+        <li><i class="fa-solid fa-house"></i>Support</li>
+        <li><i class="fa-solid fa-house"></i>Privacy</li>
     </ul>
-
    </aside>
    <div class="main-container">
-    <nav>
+    <nav class="nav-container">
         <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="search">
             <i class="fa-solid fa-bell"></i>
         </div>
         <div class="profile">
-            <img src="" alt="Profile Image">
+            <img src="img-profile.png" alt="Profile Image">
             <h3 class="class-name">Robert Lingisqui</h3>
         </div>
-
     </nav>
     <header>
-        
+        <div class="header">
+            <div class="header-profile">
+                <div class="image-container">
+                    <img src="img-profile.png" alt="Profile Image">
+                </div>
+                <div class="profile-container">
+                    <p>Hi There,</p>
+                    <h2 class="class-name">Robert Lingisqui</h2>
+                </div>
+            </div>
+            <div class="header-options">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
     </header>
-    <main>
+    <main class="card">
+        <div class="projects-card">
+            <h2>Your Projects</h2>
+            <div class="body-projects">
+                <h3>Super Cool Proyect</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+            <div class="body-projects">
+                <h3>Less Cool Proyect</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+            <div class="body-projects">
+                <h3>Imposible App</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+            <div class="body-projects">
+                <h3>Easy Peasy App</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+            <div class="body-projects">
+                <h3>Ad Blocker</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+            <div class="body-projects">
+                <h3>Money Maker</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque! 
+                    Suscipit sequi quis numquam facere! Nisi et asperiores quidem quos.</p>
+                <div class="links">
+                    <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down-to-arc"></i></a>
+                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="annoucements-card">
+            <h2>Annoucements</h2>
+            <div class="annoucements">
+                <div class="body-annoucements">
+                    <h3>Site Maintenance</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                </div>
+                <div class="body-annoucements">
+                    <h3>Community Share Day</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                </div>
+                <div class="body-annoucements">
+                    <h3>Update Privacy Policy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                </div>  
+            </div>
+            <div class="body-annoucements">
+                <h3>Site Maintenance</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+            </div>
+            <div class="body-annoucements">
+                <h3>Community Share Day</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+            </div>
+            <div class="body-annoucements">
+                <h3>Update Privacy Policy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+            </div>
+        </div>
+        <div class="trending-card">
+            <h2>Trending</h2>
+            <div class="trending">
+                <div class="body-trending">
+                    <img src="" alt="Trending-Image">
+                    <div class="trending-container">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="body-trending">
+                    <img src="" alt="Trending-Image">
+                    <div class="trending-container">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="body-trending">
+                    <img src="" alt="Trending-Image">
+                    <div class="trending-container">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="body-trending">
+                    <img src="" alt="Trending-Image">
+                    <div class="trending-container">
+                        <h3>@tegan</h3>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+            </div>
+        </div>
  
     </main>
    </div>
