--- a/index.html
+++ b/index.html
@@ -12,15 +12,159 @@
 </head>
 <body>
     <div class="container">
-        <aside class="aside">Aside</aside>
-        <nav class="navbar">Navbar</nav>
-        <header class="header">Header</header>
+        <aside class="aside">
+            <h1 class="aside-tittle"><i class="fa-solid fa-house"></i> <span>DashBoard</span> </h1>
+            <ul class="list-1">
+                <li class="icon"><i class="fa-solid fa-house"></i><span>Home</span></li>
+                <li class="icon"><i class="fa-solid fa-address-card"></i><span>Profile</span></li>
+                <li class="icon"><i class="fa-solid fa-message"></i><span>Messages</span></li>
+                <li class="icon"><i class="fa-solid fa-clock"></i><span>History</span></li>
+                <li class="icon"><i class="fa-solid fa-list-check"></i><span>Task</span></li>
+                <li class="icon"><i class="fa-solid fa-people-group"></i><span>Communities</span></li>
+            </ul>
+            <ul class="list-2">
+                <li class="icon"><i class="fa-solid fa-gear"></i><span>Settings</span></li>
+                <li class="icon"><i class="fa-solid fa-house"></i><span>Support</span></li>
+                <li class="icon"><i class="fa-solid fa-house"></i><span>Privacy</span></li>
+            </ul>
+        </aside>
+        <nav class="navbar">
+            <div class="search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="search">
+                <i class="fa-solid fa-bell"></i>
+            </div>
+            <div class="profile">
+                <img src="img-profile.png" alt="Profile Image">
+                <h3 class="name">Robert Lingisqui</h3>
+            </div>
+        </nav>
+        <header class="header">
+            <div class="header-profile">
+                <div class="image-container">
+                     <img src="img-profile.png" alt="Profile Image">
+                </div>
+                <div class="profile-container">
+                    <p>Hi There,</p>
+                    <h2 class="class-name">Robert Lingisqui (@Robertito)</h2>
+                </div>
+             </div>
+             <div class="header-options">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </header>
         <main class="main">
             <div class="main-1">
-
+                <div class="body-projects">
+                    <h3>Imposible App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque!</p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
+                <div class="body-projects">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque!</p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
+                <div class="body-projects">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque!</p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
+                <div class="body-projects">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque!</p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
+                <div class="body-projects">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque! </p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
+                <div class="body-projects">
+                    <h3>Bad Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quae, harum modi nesciunt accusantium consequuntur officiis cumque!</p>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-star-half-stroke"></i></a>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </div>
+                </div>
             </div>
             <div class="main-2">
-                
+                <div class="annoucements-card">
+                    <h2>Annoucements</h2>
+                    <div class="annoucements">
+                        <div class="body-annoucements">
+                            <h3>Site Maintenance</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                        </div>
+                        <div class="body-annoucements">
+                            <h3>Community Share Day</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                        </div>
+                        <div class="body-annoucements">
+                            <h3>Update Privacy Policy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Quae, harum modi nesciunt accusantium consequuntur officiis cumque.</p>
+                        </div>  
+                    </div>
+                </div>
+                <div class="trending-card">
+                    <h2>Trending</h2>
+                    <div class="trending">
+                        <div class="body-trending">
+                            <img src="trending-image.jfif" alt="Trending-Image">
+                            <div class="trending-container">
+                                <h3>@tegan</h3>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="body-trending">
+                            <img src="trending-image.jfif" alt="Trending-Image">
+                            <div class="trending-container">
+                                <h3>@tegan</h3>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="body-trending">
+                            <img src="trending-image.jfif" alt="Trending-Image">
+                            <div class="trending-container">
+                                <h3>@tegan</h3>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
